--- a/styles.css
+++ b/styles.css
@@ -175,3 +175,68 @@ a {
     align-self: flex-end;
     margin-right: 595px;
 }
+
+/* Signup styling */
+.signup {
+    display: flex;
+    padding-left: 128px;
+    padding-right: 128px;
+    flex: 1;
+    justify-content: center;
+    align-items: center;
+    padding: 48px 0;
+    margin-bottom: 48px;
+}
+
+.signupBox {
+    display: flex;
+    justify-content: space-around;
+    width: 900px;
+    background-color: #3882F6;
+    border-radius: 8px;
+    padding: 32px 18px;
+}
+
+.signupLeft {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: flex-start;
+    color: #f9faf8;
+    gap: 4px;
+}
+
+.signupLeftHeader {
+    font-size: 18px;
+    font-weight: 900;
+}
+
+.signupLeftText {
+    font-size: 14px;
+}
+
+.signupRight {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.signupButtonTwo {
+    color: #f9faf8;
+    font-weight: bold;
+    background-color: #3882F6;
+    border-radius: 6px;
+    border: 2px solid #f9faf8;
+    padding: 8px 25px;
+}
+
+/* Footer styling */
+.footer {
+    display: flex;
+    justify-content: center;
+    background-color: #1F2937;
+    color: #f9faf8;
+    flex: 1;
+    padding-top: 24px;
+    padding-bottom: 24px;
+}
