--- a/styles.css
+++ b/styles.css
@@ -4,7 +4,7 @@ body {
     display: flex;
     flex-direction: column;
     height: 100vh;
-    margin: 0;
+    margin: auto;
     overflow-y: scroll;
     scrollbar-width: none;
     font-family: Roboto, sans-serif;
@@ -61,6 +61,7 @@ a {
     flex-direction: column;
     align-items: flex-start;
     margin-right: auto;
+    flex: 1;
 }
 
 .headerBottomLeftHeadline {
